Tercer Commit: se agrega comentario en el index.html desde el editor remoto de github

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="body">
+<body class="body"> <!-- Comentario desde el editor de github. -->
     <header class="header">
         <img class="header__logo" src="./asserts/unl-telematica.png" alt="">
         <nav class="header__nav">
