Nuevo comentario desde el repositorio local hacia el remoto

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     width=100% height="600">
             </div>
         </section>
-        <section class="main__secundaria">
+        <section class="main__secundaria"> <!-- Otro comentario-->
             <article class="main__article">
                 <picture class="main__imagen">
                     <img src="./asserts/wifi.png" alt="Imagen de WiFi." width="50" height="50">
