Se incorpora la identidad de colores por cada Unidad Academica y sus logos .svg disponibles

--- a/secciones/uacademicas.html
+++ b/secciones/uacademicas.html
@@ -90,8 +90,8 @@
                     <h3 class="main__unidad">Centro Universitario Reconquista</h3>
                     <p class="main__parrafo"> Director Dr. Eduardo Eliseo BARONI</p>
                     <p class="main__parrafo"> Laura Devetach 3535 – Reconquista.</p>
-                    <p class="main__parrafo"> Tel/Fax: 03482 – 449299/449048/428895</p>
-                    <p class="main__parrafo"> cu-ra@unl.edu.ar / baroni@unl.edu.ar</p>
+                    <p class="main__parrafo"> Tel.: 03482 – 449299/449048/428895</p>
+                    <p class="main__parrafo"> cu-ra@unl.edu.ar</p>
                     <p class="main__parrafo"> www.cu-ra.unl.edu.ar</p>
                     </p>
                 </article>
@@ -122,26 +122,26 @@
                 <!-- Seccion de Facultades Universitarias -->
                 <article class="main__article fadu">
                     <picture class="main__imagen">
-                        <img src="../asserts/LogoUA/unl_identidad.svg" alt="Imagen de WiFi." width="50" height="50">
+                        <img src="../asserts/LogoUA/fadu_marca_2021.svg" alt="Imagen de WiFi." width="50" height="50">
                     </picture>
                     <h3 class="main__unidad">Facultad de Arquitectura, Diseño y Urbanismo</h3>
                     <p class="main__parrafo"> Decano: Arq. Sergio Cosentino</p>
                     <p class="main__parrafo"> Sede: Ciudad Universitaria (Santa Fe)</p>
                     <p class="main__parrafo"> Tel. (0342) 4575100</p>
                     <p class="main__parrafo"> E-mail: facultad@fadu.unl.edu.ar</p>
-                    <p class="main__parrafo"> Web: www.fadu.unl.edu.ar</p>
+                    <p class="main__parrafo"> www.fadu.unl.edu.ar</p>
                     </p>
                 </article>
-                <article class="main__article">
-                    <picture class="main__imagen fbcb">
-                        <img src="../asserts/LogoUA/unl_identidad.svg" alt="Imagen de WiFi." width="50" height="50">
+                <article class="main__article fbcb">
+                    <picture class="main__imagen ">
+                        <img src="../asserts/LogoUA/fbcb_marca_2021.svg" alt="Imagen de WiFi." width="50" height="50">
                     </picture>
                     <h3 class="main__unidad">Facultad de Bioquímica y Ciencias Biológicas</h3>
                     <p class="main__parrafo"> Decana: Bioq. Adriana Ortolani</p>
                     <p class="main__parrafo"> Sede: Ciudad Universitaria (Santa Fe)</p>
                     <p class="main__parrafo"> Tel.: (0342) 4575215</p>
                     <p class="main__parrafo"> E-mail: informes@fbcb.unl.edu.ar</p>
-                    <p class="main__parrafo"> Web: www.fbcb.unl.edu.ar</p>
+                    <p class="main__parrafo"> www.fbcb.unl.edu.ar</p>
                     </p>
                 </article>
                 <article class="main__article fca">
